Mark episodes as watched after click, Customizable quick rewind, Documented AwerySettings, Fix crash if media has no lists, Enable Material You by default if it is supported on the device